Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43164

qt_error_string() Q_OS_WIN | !Q_OS_WINRT doesn't define FORMAT_MESSAGE_IGNORE_INSERTS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.5.0 Beta
    • 5.3.2
    • Core: Other
    • None
    •  06671a3cbda8b74b350eb14c0fbc23c0a63a7c64 (qtbase/5.5, 2.4.2015, 5.5)

      While Q_OS_WINRT does define the FORMAT_MESSAGE_IGNORE_INSERTS flag, the non WinRT WIN32 pathway does not.

      This is needed to provide better error detail in regard to error messages. Without the flag, a lot of system errors are not returned.

      Within any design change to this API, please consider the fact FORMAT_MESSAGE_IGNORE_INSERTS means parameter format specifiers will be returned within any error code.

      At the moment, what would be returned from the Q_OS_WINRT and !Q_OS_WINRT are different due to one using this flag and one not.

      I prefer more detail on such an error rather than less, so vote for adding FORMAT_MESSAGE_IGNORE_INSERTS rather than removing it from Q_OS_WINRT.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            vtraveller Justin Howard
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes